// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | app-header | index snapshot doit correspondre quand l'user est connecté en mode desktop 1`] = `
<WithStyles(ForwardRef(AppBar))
  position="relative"
>
  <WithStyles(ForwardRef(Toolbar))
    classes={
      Object {
        "root": "AppHeader-toolbarRoot-7",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(ForwardRef(Typography))
      classes={
        Object {
          "root": "AppHeader-titleRoot-6",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeader-lighterMobileTitle-3"
        >
          LEXIMPACT 
        </span>
      </span>
    </WithStyles(ForwardRef(Typography))>
    <div />
  </WithStyles(ForwardRef(Toolbar))>
</WithStyles(ForwardRef(AppBar))>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user est connecté en mode mobile 1`] = `
<WithStyles(ForwardRef(AppBar))
  position="relative"
>
  <WithStyles(ForwardRef(Toolbar))
    classes={
      Object {
        "root": "AppHeader-toolbarRoot-7",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(ForwardRef(Typography))
      classes={
        Object {
          "root": "AppHeader-titleRoot-6",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeader-lighterMobileTitle-3"
        >
          LEXIMPACT 
        </span>
      </span>
    </WithStyles(ForwardRef(Typography))>
    <div />
  </WithStyles(ForwardRef(Toolbar))>
</WithStyles(ForwardRef(AppBar))>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user n'est pas connecté en mode desktop 1`] = `
<WithStyles(ForwardRef(AppBar))
  position="relative"
>
  <WithStyles(ForwardRef(Toolbar))
    classes={
      Object {
        "root": "AppHeader-toolbarRoot-7",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(ForwardRef(Typography))
      classes={
        Object {
          "root": "AppHeader-titleRoot-6",
        }
      }
      component="div"
    >
      <div>
        <div
          className="AppHeader-lighterTitle-4"
        >
          LEXIMPACT 
        </div>
      </div>
    </WithStyles(ForwardRef(Typography))>
    <div />
  </WithStyles(ForwardRef(Toolbar))>
</WithStyles(ForwardRef(AppBar))>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user n'est pas connecté en mode mobile 1`] = `
<WithStyles(ForwardRef(AppBar))
  position="relative"
>
  <WithStyles(ForwardRef(Toolbar))
    classes={
      Object {
        "root": "AppHeader-toolbarRoot-7",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(ForwardRef(Typography))
      classes={
        Object {
          "root": "AppHeader-titleRoot-6",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeader-lighterMobileTitle-3"
        >
          LEXIMPACT 
        </span>
      </span>
    </WithStyles(ForwardRef(Typography))>
    <div />
  </WithStyles(ForwardRef(Toolbar))>
</WithStyles(ForwardRef(AppBar))>
`;
